# websocket_server_win

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
includes/: Request.h  initSocket.h  utils.h  websocket.h
src/: Request.cpp  initSocket.cpp  utils.cpp  websocket.cpp
web/: index.html
